gcc/testsuite/rust/rustc/ui/attributes/doc-test-literal_dg.rs
#![doc(test(""))]
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

